@@ -24,36 +24,69 @@
  */
 package jdk.jpackage.internal.util;
 
+import static java.util.stream.Collectors.collectingAndThen;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Collectors.toSet;
+
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.CopyOption;
+import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiFunction;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Stream;
 
-
 /**
- * Group of paths.
- * Each path in the group is assigned a unique id.
+ * Group of paths. Each path in the group is assigned a unique id.
  */
 public final class PathGroup {
+
+    /**
+     * Creates path group with the initial paths.
+     *
+     * @param paths the initial paths
+     */
     public PathGroup(Map<Object, Path> paths) {
+        paths.keySet().forEach(Objects::requireNonNull);
+        paths.values().forEach(Objects::requireNonNull);
         entries = new HashMap<>(paths);
     }
 
+    /**
+     * Returns a path associated with the given identifier in this path group.
+     *
+     * @param id the identifier
+     * @return the path corresponding to the given identifier in this path group or
+     *         <code>null</code> if there is no such path
+     */
     public Path getPath(Object id) {
-        if (id == null) {
-            throw new NullPointerException();
-        }
+        Objects.requireNonNull(id);
         return entries.get(id);
     }
 
+    /**
+     * Assigns the specified path value to the given identifier in this path group.
+     * If the given identifier doesn't exist in this path group, it is added,
+     * otherwise, the current value associated with the identifier is replaced with
+     * the given path value. If the path value is <code>null</code> the given
+     * identifier is removed from this path group if it existed; otherwise, no
+     * action is taken.
+     *
+     * @param id   the identifier
+     * @param path the path to associate with the identifier or <code>null</code>
+     */
     public void setPath(Object id, Path path) {
+        Objects.requireNonNull(id);
         if (path != null) {
             entries.put(id, path);
         } else {
@@ -62,196 +95,379 @@ public final class PathGroup {
     }
 
     /**
-     * All configured entries.
+     * Adds a path associated with the new unique identifier to this path group.
+     *
+     * @param path the path to associate the new unique identifier in this path
+     *             group
+     */
+    public void ghostPath(Path path) {
+        Objects.requireNonNull(path);
+        setPath(new Object(), path);
+    }
+
+    /**
+     * Gets all identifiers of this path group.
+     * <p>
+     * The order of identifiers in the returned list is undefined.
+     *
+     * @return all identifiers of this path group
+     */
+    public Set<Object> keys() {
+        return entries.keySet();
+    }
+
+    /**
+     * Gets paths associated with all identifiers in this path group.
+     * <p>
+     * The order of paths in the returned list is undefined.
+     *
+     * @return paths associated with all identifiers in this path group
      */
     public List<Path> paths() {
         return entries.values().stream().toList();
     }
 
     /**
-     * Root entries.
+     * Gets root paths in this path group.
+     * <p>
+     * If multiple identifiers are associated with the same path value in the group,
+     * the path value is added to the returned list only once. Paths that are
+     * descendants of other paths in the group are not added to the returned list.
+     * <p>
+     * The order of paths in the returned list is undefined.
+     *
+     * @return unique root paths in this path group
      */
     public List<Path> roots() {
-        // Sort by the number of path components in ascending order.
-        List<Map.Entry<Path, Path>> sorted = normalizedPaths().stream().sorted(
-                (a, b) -> a.getKey().getNameCount() - b.getKey().getNameCount()).toList();
+        if (entries.isEmpty()) {
+            return List.of();
+        }
 
-        // Returns `true` if `a` is a parent of `b`
-        BiFunction<Map.Entry<Path, Path>, Map.Entry<Path, Path>, Boolean> isParentOrSelf = (a, b) -> {
-            return a == b || b.getKey().startsWith(a.getKey());
-        };
+        // Sort by the number of path components in descending order.
+        final var sorted = entries.entrySet().stream().map(e -> {
+            return Map.entry(e.getValue().normalize(), e.getValue());
+        }).sorted(Comparator.comparingInt(e -> e.getValue().getNameCount() * -1)).distinct().toList();
 
-        return sorted.stream().filter(
-                v -> v == sorted.stream().sequential().filter(
-                        v2 -> isParentOrSelf.apply(v2, v)).findFirst().get()).map(
-                        v -> v.getValue()).toList();
+        final var shortestNormalizedPath = sorted.getLast().getKey();
+        if (shortestNormalizedPath.getNameCount() == 1 && shortestNormalizedPath.getFileName().toString().isEmpty()) {
+            return List.of(sorted.getLast().getValue());
+        }
+
+        final List<Path> roots = new ArrayList<>();
+
+        for (int i = 0; i < sorted.size(); ++i) {
+            final var path = sorted.get(i).getKey();
+            boolean pathIsRoot = true;
+            for (int j = i + 1; j < sorted.size(); ++j) {
+                final var maybeParent = sorted.get(j).getKey();
+                if (path.getNameCount() > maybeParent.getNameCount() && path.startsWith(maybeParent)) {
+                    pathIsRoot = false;
+                    break;
+                }
+            }
+
+            if (pathIsRoot) {
+                roots.add(sorted.get(i).getValue());
+            }
+        }
+
+        return roots;
     }
 
+    /**
+     * Gets the number of bytes in root paths of this path group. The method sums
+     * the size of all root path entries in the group. If the path entry is a
+     * directory it calculates the total size of the files in the directory. If the
+     * path entry is a file, it takes its size.
+     *
+     * @return the total number of bytes in root paths of this path group
+     * @throws IOException If an I/O error occurs
+     */
     public long sizeInBytes() throws IOException {
         long reply = 0;
-        for (Path dir : roots().stream().filter(f -> Files.isDirectory(f)).collect(
-                Collectors.toList())) {
-            try (Stream<Path> stream = Files.walk(dir)) {
-                reply += stream.filter(p -> Files.isRegularFile(p)).mapToLong(
-                        f -> f.toFile().length()).sum();
+        final var roots = roots();
+        try {
+            for (Path dir : roots.stream().filter(Files::isDirectory).toList()) {
+                try (Stream<Path> stream = Files.walk(dir)) {
+                    reply += stream.mapToLong(PathGroup::sizeInBytes).sum();
+                }
             }
+            reply += roots.stream().mapToLong(PathGroup::sizeInBytes).sum();
+        } catch (UncheckedIOException ex) {
+            throw ex.getCause();
         }
         return reply;
     }
 
+    private static long sizeInBytes(Path path) throws UncheckedIOException {
+        if (Files.isRegularFile(path)) {
+            try {
+                return Files.size(path);
+            } catch (IOException ex) {
+                throw new UncheckedIOException(ex);
+            }
+        } else {
+            return 0;
+        }
+    }
+
+    /**
+     * Creates a copy of this path group with all paths resolved against the given
+     * root. Taken action is equivalent to creating a copy of this path group and
+     * calling <code>root.resolve()</code> on every path in the copy.
+     *
+     * @param root the root against which to resolve paths
+     *
+     * @return a new path group resolved against the given root path
+     */
     public PathGroup resolveAt(Path root) {
-        return new PathGroup(entries.entrySet().stream().collect(
-                Collectors.toMap(e -> e.getKey(),
-                        e -> root.resolve(e.getValue()))));
+        Objects.requireNonNull(root);
+        return new PathGroup(entries.entrySet().stream()
+                .collect(toMap(Map.Entry::getKey, e -> root.resolve(e.getValue()))));
     }
 
-    public void copy(PathGroup dst) throws IOException {
-        copy(this, dst, null, false);
+    /**
+     * Copies files/directories from the locations in the path group into the
+     * locations of the given path group. For every identifier found in this and the
+     * given group, copy the associated file or directory from the location
+     * specified by the path value associated with the identifier in this group into
+     * the location associated with the identifier in the given group.
+     *
+     * @param dst the destination path group
+     * @throws IOException If an I/O error occurs
+     */
+    public void copy(PathGroup dst, CopyOption ...options) throws IOException {
+        final var handler = new Copy(false, options);
+        copy(this, dst, handler, handler.followSymlinks());
     }
 
-    public void move(PathGroup dst) throws IOException {
-        copy(this, dst, null, true);
+    /**
+     * Similar to {@link #copy(PathGroup)} but moves files/directories instead of
+     * copying.
+     *
+     * @param dst the destination path group
+     * @throws IOException If an I/O error occurs
+     */
+    public void move(PathGroup dst, CopyOption ...options) throws IOException {
+        final var handler = new Copy(true, options);
+        copy(this, dst, handler, handler.followSymlinks());
+        deleteEntries();
     }
 
+    /**
+     * Similar to {@link #copy(PathGroup)} but uses the given handler to transform
+     * paths instead of coping.
+     *
+     * @param dst the destination path group
+     * @param handler the path transformation handler
+     * @throws IOException If an I/O error occurs
+     */
     public void transform(PathGroup dst, TransformHandler handler) throws IOException {
         copy(this, dst, handler, false);
     }
 
-    public static interface Facade<T> {
-        PathGroup pathGroup();
-
-        default Collection<Path> paths() {
-            return pathGroup().paths();
-        }
-
-        default List<Path> roots() {
-            return pathGroup().roots();
-        }
-
-        default long sizeInBytes() throws IOException {
-            return pathGroup().sizeInBytes();
-        }
-
-        T resolveAt(Path root);
-
-        default void copy(Facade<T> dst) throws IOException {
-            pathGroup().copy(dst.pathGroup());
-        }
-
-        default void move(Facade<T> dst) throws IOException {
-            pathGroup().move(dst.pathGroup());
-        }
-
-        default void transform(Facade<T> dst, TransformHandler handler) throws
-                IOException {
-            pathGroup().transform(dst.pathGroup(), handler);
-        }
-    }
-
+    /**
+     * Handler of file copying and directory creating.
+     *
+     * @see #transform
+     */
     public static interface TransformHandler {
-        void copyFile(Path src, Path dst) throws IOException;
-        void createDirectory(Path dir) throws IOException;
+
+        /**
+         * Request to copy a file from the given source location into the given
+         * destination location.
+         *
+         * @implNote Default implementation takes no action
+         *
+         * @param src the source file location
+         * @param dst the destination file location
+         * @throws IOException If an I/O error occurs
+         */
+        default void copyFile(Path src, Path dst) throws IOException {
+
+        }
+
+        /**
+         * Request to create a directory at the given location.
+         *
+         * @implNote Default implementation takes no action
+         *
+         * @param dir the path where the directory is requested to be created
+         * @throws IOException
+         */
+        default void createDirectory(Path dir) throws IOException {
+
+        }
+
+        /**
+         * Request to copy a symbolic link from the given source location into the given
+         * destination location.
+         *
+         * @implNote Default implementation calls {@link #copyFile}.
+         *
+         * @param src the source symbolic link location
+         * @param dst the destination symbolic link location
+         * @throws IOException If an I/O error occurs
+         */
+        default void copySymbolicLink(Path src, Path dst) throws IOException {
+            copyFile(src, dst);
+        }
     }
 
-    private static void copy(PathGroup src, PathGroup dst,
-            TransformHandler handler, boolean move) throws IOException {
-        List<Map.Entry<Path, Path>> copyItems = new ArrayList<>();
-        List<Path> excludeItems = new ArrayList<>();
-
-        for (var id: src.entries.keySet()) {
-            Path srcPath = src.entries.get(id);
-            if (dst.entries.containsKey(id)) {
-                copyItems.add(Map.entry(srcPath, dst.entries.get(id)));
+    private void deleteEntries() throws IOException {
+        for (final var file : entries.values()) {
+            if (Files.isDirectory(file)) {
+                FileUtils.deleteRecursive(file);
             } else {
-                excludeItems.add(srcPath);
+                Files.deleteIfExists(file);
+            }
+        }
+    }
+
+    private record CopySpec(Path basepath, Path from, Path to) {
+        CopySpec {
+            Objects.requireNonNull(basepath);
+            Objects.requireNonNull(to);
+            if (!from.startsWith(basepath)) {
+                throw new IllegalArgumentException();
             }
         }
 
-        copy(move, copyItems, excludeItems, handler);
+        @Override
+        public int hashCode() {
+            return Objects.hash(from, to);
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (this == obj) {
+                return true;
+            }
+            if ((obj == null) || (getClass() != obj.getClass())) {
+                return false;
+            }
+            CopySpec other = (CopySpec) obj;
+            return Objects.equals(from, other.from) && Objects.equals(to, other.to);
+        }
+
+        Path fromNormalized() {
+            return from().normalize();
+        }
+
+        Path toNormalized() {
+            return to().normalize();
+        }
+
+        CopySpec(Path from, Path to) {
+            this(from, from, to);
+        }
     }
 
-    private static void copy(boolean move, List<Map.Entry<Path, Path>> entries,
-            List<Path> excludePaths, TransformHandler handler) throws
-            IOException {
+    private static void copy(PathGroup src, PathGroup dst, TransformHandler handler, boolean followSymlinks) throws IOException {
+        List<CopySpec> copySpecs = new ArrayList<>();
+        List<Path> excludePaths = new ArrayList<>();
 
-        if (handler == null) {
-            handler = new TransformHandler() {
-                @Override
-                public void copyFile(Path src, Path dst) throws IOException {
-                    Files.createDirectories(dst.getParent());
-                    if (move) {
-                        Files.move(src, dst);
-                    } else {
-                        Files.copy(src, dst);
+        for (final var e : src.entries.entrySet()) {
+            final var srcPath = e.getValue();
+            final var dstPath = dst.entries.get(e.getKey());
+            if (dstPath != null) {
+                copySpecs.add(new CopySpec(srcPath, dstPath));
+            } else {
+                excludePaths.add(srcPath.normalize());
+            }
+        }
+
+        copy(copySpecs, excludePaths, handler, followSymlinks);
+    }
+
+    private record Copy(boolean move, boolean followSymlinks, CopyOption ... options) implements TransformHandler {
+
+        Copy(boolean move, CopyOption ... options) {
+            this(move, !Set.of(options).contains(LinkOption.NOFOLLOW_LINKS), options);
+        }
+
+        @Override
+        public void copyFile(Path src, Path dst) throws IOException {
+            Files.createDirectories(dst.getParent());
+            if (move) {
+                Files.move(src, dst, options);
+            } else {
+                Files.copy(src, dst, options);
+            }
+        }
+
+        @Override
+        public void createDirectory(Path dir) throws IOException {
+            Files.createDirectories(dir);
+        }
+    }
+
+    private static boolean match(Path what, List<Path> paths) {
+        return paths.stream().anyMatch(what::startsWith);
+    }
+
+    private static void copy(List<CopySpec> copySpecs, List<Path> excludePaths,
+            TransformHandler handler, boolean followSymlinks) throws IOException {
+        Objects.requireNonNull(excludePaths);
+        Objects.requireNonNull(handler);
+
+
+        final var filteredCopySpecs = copySpecs.stream().<CopySpec>mapMulti((copySpec, consumer) -> {
+            final var src = copySpec.from();
+
+            if (!Files.exists(src) || match(src, excludePaths)) {
+                return;
+            }
+
+            if (Files.isDirectory(copySpec.from())) {
+                final var dst = copySpec.to;
+                final var walkMode = followSymlinks ? new FileVisitOption[] { FileVisitOption.FOLLOW_LINKS } : new FileVisitOption[0];
+                try (final var files = Files.walk(src, walkMode)) {
+                    files.filter(file -> {
+                        return !match(file, excludePaths);
+                    }).map(file -> {
+                        return new CopySpec(src, file, dst.resolve(src.relativize(file)));
+                    }).toList().forEach(consumer::accept);
+                } catch (IOException ex) {
+                    throw new UncheckedIOException(ex);
+                }
+            } else {
+                consumer.accept(copySpec);
+            }
+        }).collect(groupingBy(CopySpec::fromNormalized, collectingAndThen(toSet(), copySpecGroup -> {
+            return copySpecGroup.stream().filter(copySpec -> {
+                for (final var otherCopySpec : copySpecGroup) {
+                    if (otherCopySpec != copySpec && !otherCopySpec.basepath().equals(copySpec.basepath())
+                            && otherCopySpec.basepath().startsWith(copySpec.basepath())) {
+                        return false;
                     }
                 }
+                return true;
+            }).toList();
+        }))).values().stream().flatMap(Collection::stream).toList();
 
-                @Override
-                public void createDirectory(Path dir) throws IOException {
-                    Files.createDirectories(dir);
+        filteredCopySpecs.stream().collect(toMap(CopySpec::toNormalized, x -> x, (x, y) -> {
+            throw new IllegalStateException(String.format(
+                    "Duplicate source files [%s] and [%s] for [%s] destination file", x.from(), y.from(), x.to()));
+        }));
+
+        try {
+            filteredCopySpecs.stream().forEach(copySpec -> {
+                try {
+                    if (Files.isSymbolicLink(copySpec.from())) {
+                        handler.copySymbolicLink(copySpec.from(), copySpec.to());
+                    } else if (Files.isDirectory(copySpec.from())) {
+                        handler.createDirectory(copySpec.to());
+                    } else {
+                        handler.copyFile(copySpec.from(), copySpec.to());
+                    }
+                } catch (IOException ex) {
+                    throw new UncheckedIOException(ex);
                 }
-            };
+            });
+        } catch (UncheckedIOException ex) {
+            throw ex.getCause();
         }
-
-        // destination -> source file mapping
-        Map<Path, Path> actions = new HashMap<>();
-        for (var action: entries) {
-            Path src = action.getKey();
-            Path dst = action.getValue();
-            if (Files.isDirectory(src)) {
-               try (Stream<Path> stream = Files.walk(src)) {
-                   stream.sequential().forEach(path -> actions.put(dst.resolve(
-                            src.relativize(path)).normalize(), path));
-               }
-            } else {
-                actions.put(dst.normalize(), src);
-            }
-        }
-
-        for (var action : actions.entrySet()) {
-            Path dst = action.getKey();
-            Path src = action.getValue();
-
-            if (excludePaths.stream().anyMatch(src::startsWith)) {
-                continue;
-            }
-
-            if (src.equals(dst) || !src.toFile().exists()) {
-                continue;
-            }
-
-            if (Files.isDirectory(src)) {
-                handler.createDirectory(dst);
-            } else {
-                handler.copyFile(src, dst);
-            }
-        }
-
-        if (move) {
-            // Delete source dirs.
-            for (var entry: entries) {
-                Path srcFile = entry.getKey();
-                if (Files.isDirectory(srcFile)) {
-                    FileUtils.deleteRecursive(srcFile);
-                }
-            }
-        }
-    }
-
-    private static Map.Entry<Path, Path> normalizedPath(Path v) {
-        final Path normalized;
-        if (!v.isAbsolute()) {
-            normalized = Path.of("./").resolve(v.normalize());
-        } else {
-            normalized = v.normalize();
-        }
-
-        return Map.entry(normalized, v);
-    }
-
-    private List<Map.Entry<Path, Path>> normalizedPaths() {
-        return entries.values().stream().map(PathGroup::normalizedPath).collect(
-                Collectors.toList());
     }
 
     private final Map<Object, Path> entries;
